# vl6180x

./: Cargo.toml  vl6180x.svd
src/: als.rs  cached_reg.rs  dmax_ranging.rs  generic.rs  lib.rs  pac.rs  wrap_around_filter.rs
src/pac/: firmware_bootup.rs  firmware_result_scaler.rs  i2c_slave_device_address.rs  identification_date_hi.rs  identification_date_lo.rs  identification_model_id.rs  identification_model_rev_major.rs  identification_model_rev_minor.rs  identification_module_rev_major.rs  identification_module_rev_minor.rs  identification_time.rs  interleaved_mode_enable.rs  readout_averaging_sample_period.rs  result_als_status.rs  result_als_val.rs  result_history_buffer.rs  result_interrupt_status_gpio.rs  result_range_raw.rs  result_range_reference_amb_count.rs  result_range_reference_conv_time.rs  result_range_reference_rate.rs  result_range_reference_signal_count.rs  result_range_return_amb_count.rs  result_range_return_conv_time.rs  result_range_return_rate.rs  result_range_return_signal_count.rs  result_range_status.rs  result_range_val.rs  sysals_analogue_gain.rs  sysals_integration_period.rs  sysals_intermeasurement_period.rs  sysals_start.rs  sysals_thresh_high.rs  sysals_thresh_low.rs  sysrange_crosstalk_compensation_rate.rs  sysrange_crosstalk_valid_height.rs  sysrange_early_convergence_estimate.rs  sysrange_intermeasurement_period.rs  sysrange_max_ambient_level_mult.rs  sysrange_max_convergence_time.rs  (+16 more)
